# DiffSRDA

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
configs/SRDA/exp1/: srda_exp1_ddim_sf4.yaml  srda_exp1_ddim_sf4_smoke.yaml
configs/SRDA/exp2/: srda_exp2_ldm_vqvae_ogi08.yaml  srda_exp2_ldm_vqvae_ogi08_smoke.yaml
data/: README.md
pyscripts/SRDA/exp1/: eval_srda_exp1_cycle.py  train_srda_exp1.py
pyscripts/SRDA/exp2/: eval_srda_exp2_cycle.py  train_srda_exp2.py
python/configs/srda/latent_vqvae/: vqvae_pixelshuffle_ogi08.yaml
python/configs/srda/srda_exp1/: base.yaml
python/configs/srda/srda_exp2/: base.yaml
python/src/srda/data/: dataloader.py  dataset.py  make_dataloaders_dict.py
python/src/srda/model/: __init__.py  base_model.py  model.py  networks.py  vqvae_pixelshuffle.py
python/src/srda/utils/: ddp.py  early_stopping.py  evaluate.py  load_latent_model.py  optimize_vqvae.py  path_utils.py  perform_enkf.py  respacing.py  save_csv.py  sensor_scenarios.py  sr_da_dm_helper.py  timing.py  train_model.py  utils.py
python/src/yasuda/: dataloader.py  dataset.py  model_maker.py  sr_da_helper.py  sr_da_helper_2.py  ssim.py
python/src/yasuda/ml_model/: conv2d_block.py  conv2d_lstm_v1.py  (+10 more)
saved_models/: README.md
shellscripts/SRDA/exp1/: deploy_eval_exp1.sh  deploy_eval_exp1_guidance_ablation.sh  deploy_train_exp1.sh  smoke_train_exp1.sh
shellscripts/SRDA/exp2/: deploy_eval_exp2.sh  deploy_train_exp2.sh  smoke_train_exp2.sh
utils/: diagnostics.py  metrics.py  path_setup.py
(+10 files in other folders)
